Updated notebook and documentation

--- a/trader_behavior_analysis.ipynb
+++ b/trader_behavior_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1d1248d1-002e-494c-aa28-eab26364cd57",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "94455b43-fa51-4f4e-ac5e-b976e9c28512",
    "metadata": {},
    "outputs": [
@@ -197,15 +197,15 @@
        "4     True  0.003055  1.050000e+15  1.730000e+12  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#date \n",
-    "historical_path = \"historical_data.csv\"\n",
-    "sentiment_path = \"fear_greed_index.csv\"\n",
+    "historical_path = \"data/historical_data.csv\"\n",
+    "sentiment_path = \"data/fear_greed_index.csv\"\n",
     "\n",
     "df_trades = pd.read_csv(historical_path)\n",
     "df_sentiment = pd.read_csv(sentiment_path)\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "de5486c3-f718-43ed-8042-c31064bcf92d",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c6bab5e4-d2cb-44df-b2be-3d22bae6790a",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "4   70.0          Greed  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "17cffe5c-12e8-4b84-b7d0-fd1ec3545243",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
     "        break\n",
     "\n",
     "if pnl_col is None:\n",
-    "    raise ValueError(\"❌ Could not find a PnL column. Please check the CSV column names.\")\n",
+    "    raise ValueError(\" Could not find a PnL column. Please check the CSV column names.\")\n",
     "\n",
     "df_merged['pnl'] = pd.to_numeric(df_merged[pnl_col], errors='coerce')\n",
     "df_merged['is_win'] = (df_merged['pnl'] > 0).astype(int)\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "e7489a6c-294f-490e-adc1-ee6ffbd02791",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "b8c0298e-4e7a-441f-9222-fac94ff907fd",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "7f78f3f3-f0f7-42ad-9e20-7b3901f05619",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "8355c88b-2fce-472e-be60-8f9a4030ba01",
    "metadata": {},
    "outputs": [
@@ -766,14 +766,6 @@
    "source": [
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "452e0be3-5820-4f25-b72f-49ed76bd2b1a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
